--- a/style.css
+++ b/style.css
@@ -102,7 +102,18 @@ nav > ul {
 }
 
 .logo-container {
+  margin-top: 25px;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+}
+footer {
+  padding: 50px 0;
+}
+.footer-section {
+  display: flex;
+  justify-content: space-between;
+}
+.social-icon i{
+    margin-left: 30px;
 }
